[package]
name = "once-cell-regex"
version = "0.2.0"
authors = ["Francesca Lovebloom <francesca@brainiumstudios.com>"]
edition = "2018"
description = "This crate just gives you the `regex` macro from the `once_cell` docs!"
documentation = "https://docs.rs/once-cell-regex"
repository = "https://github.com/francesca64/once-cell-regex"
readme = "README.md"
keywords = ["lazy", "regex", "static"]
license = "Apache-2.0/MIT"

[features]
default = ["perf", "std", "unicode"]
parking_lot = ["once_cell/parking_lot"]
perf = ["regex/perf"]
std = ["once_cell/std", "regex/std"]
unicode = ["regex/unicode"]

[dependencies]
once_cell = { version = "1.4.1", default-features = false }
regex = { version = "1.4.2", default-features = false }
